fix notification view style

--- a/RollingPaper/RollingPaper/Controllers/NotificationsViewController.xib
+++ b/RollingPaper/RollingPaper/Controllers/NotificationsViewController.xib
@@ -63,10 +63,9 @@
 				</object>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<bool key="IBUIBouncesZoom">NO</bool>
-				<int key="IBUISeparatorStyle">1</int>
 				<object class="NSColor" key="IBUISeparatorColor">
 					<int key="NSColorSpace">3</int>
-					<bytes key="NSWhite">MAA</bytes>
+					<bytes key="NSWhite">MC42NjY2NjY2NjY3AA</bytes>
 				</object>
 				<int key="IBUISectionIndexMinimumDisplayRowCount">0</int>
 				<bool key="IBUIAllowsSelectionDuringEditing">YES</bool>
