--- a/RollingPaper/RollingPaper/Controllers/PaperTableViewCell.xib
+++ b/RollingPaper/RollingPaper/Controllers/PaperTableViewCell.xib
@@ -184,7 +184,6 @@
 										<string key="NSFrame">{{127, 66}, {80, 27}}</string>
 										<reference key="NSSuperview" ref="403583007"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIAutoresizesSubviews">NO</bool>
@@ -412,17 +411,20 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">PaperTableViewCell</string>
 					<string key="superclassName">UITableViewCell</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">onSettingTouched:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">onSettingTouched:</string>
-						<object class="IBActionInfo" key="NS.object.0">
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="onBackgroundToched:">id</string>
+						<string key="onSettingTouched:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="onBackgroundToched:">
+							<string key="name">onBackgroundToched:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="onSettingTouched:">
 							<string key="name">onSettingTouched:</string>
 							<string key="candidateClassName">id</string>
 						</object>
-					</object>
+					</dictionary>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="backgroundImage">UIImageView</string>
 						<string key="ddayLabel">UILabel</string>
