--- a/RollingPaper/RollingPaper/Controllers/NotificationCell.xib
+++ b/RollingPaper/RollingPaper/Controllers/NotificationCell.xib
@@ -90,11 +90,11 @@
 											<string key="name">AppleSDGothicNeo-Medium</string>
 											<string key="family">Apple SD Gothic Neo</string>
 											<int key="traits">0</int>
-											<double key="pointSize">11</double>
+											<double key="pointSize">14</double>
 										</object>
 										<object class="NSFont" key="IBUIFont">
 											<string key="NSName">AppleSDGothicNeo-Medium</string>
-											<double key="NSSize">11</double>
+											<double key="NSSize">14</double>
 											<int key="NSfFlags">16</int>
 										</object>
 										<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
@@ -142,13 +142,7 @@
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="600948085"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<object class="NSColor" key="IBUIBackgroundColor">
-									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MQA</bytes>
-									<object class="NSColorSpace" key="NSCustomColorSpace">
-										<int key="NSID">2</int>
-									</object>
-								</object>
+								<reference key="IBUIBackgroundColor" ref="152850057"/>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
 							<object class="IBUIImageView" id="807950952">
@@ -157,7 +151,6 @@
 								<string key="NSFrame">{{0, 42}, {320, 5}}</string>
 								<reference key="NSSuperview" ref="486789271"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -185,6 +178,7 @@
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="486789271"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
+				<reference key="IBUIBackgroundColor" ref="152850057"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<int key="IBUISelectionStyle">2</int>
 				<reference key="IBUIContentView" ref="486789271"/>
