--- a/RollingPaper/RollingPaper/Controllers/PaperSettingsViewController.xib
+++ b/RollingPaper/RollingPaper/Controllers/PaperSettingsViewController.xib
@@ -47,7 +47,7 @@
 						<array class="NSMutableArray" key="NSSubviews"/>
 						<string key="NSFrameSize">{320, 504}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -56,6 +56,7 @@
 				</array>
 				<string key="NSFrame">{{0, 64}, {320, 504}}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="856692352"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -96,6 +97,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{21, 5}, {98, 21}}</string>
 						<reference key="NSSuperview" ref="588354170"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="281916264"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -128,6 +130,7 @@
 						<int key="NSvFlags">301</int>
 						<string key="NSFrame">{{17, 24}, {277, 38}}</string>
 						<reference key="NSSuperview" ref="588354170"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="88687373"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -167,6 +170,7 @@
 						<int key="NSvFlags">301</int>
 						<string key="NSFrame">{{266, 32}, {19, 22}}</string>
 						<reference key="NSSuperview" ref="588354170"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="819561185"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -205,6 +209,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{21, 78}, {98, 22}}</string>
 						<reference key="NSSuperview" ref="588354170"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="516455170"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -225,6 +230,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{18, 98}, {276, 38}}</string>
 						<reference key="NSSuperview" ref="588354170"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="725225614"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -252,6 +258,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{21, 144}, {98, 22}}</string>
 						<reference key="NSSuperview" ref="588354170"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1014389888"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -272,6 +279,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{18, 167}, {276, 106}}</string>
 						<reference key="NSSuperview" ref="588354170"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="30284652"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -300,6 +308,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{21, 281}, {59, 22}}</string>
 						<reference key="NSSuperview" ref="588354170"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="405677947"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -320,6 +329,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{18, 304}, {276, 38}}</string>
 						<reference key="NSSuperview" ref="588354170"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="966899717"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -347,6 +357,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{18, 338}, {276, 38}}</string>
 						<reference key="NSSuperview" ref="588354170"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="128355092"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -374,6 +385,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{18, 372}, {276, 38}}</string>
 						<reference key="NSSuperview" ref="588354170"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="226062029"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -401,6 +413,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{188, 377}, {94, 27}}</string>
 						<reference key="NSSuperview" ref="588354170"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1069328928"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -414,6 +427,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{21, 441}, {270, 35}}</string>
 						<reference key="NSSuperview" ref="588354170"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="649888099"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -428,6 +442,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{21, 420}, {98, 22}}</string>
 						<reference key="NSSuperview" ref="588354170"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="124673137"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -452,6 +467,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrameSize">{270, 37}</string>
 								<reference key="NSSuperview" ref="649888099"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="68749440"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -482,6 +498,7 @@
 						</array>
 						<string key="NSFrame">{{21, 450}, {270, 37}}</string>
 						<reference key="NSSuperview" ref="588354170"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="805316050"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="608764614">
@@ -499,6 +516,7 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrame">{{23, 20}, {268, 109}}</string>
 								<reference key="NSSuperview" ref="68749440"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="629076504"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="608764614"/>
@@ -515,6 +533,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{23, 20}, {271, 114}}</string>
 								<reference key="NSSuperview" ref="68749440"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="847340093"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="608764614"/>
@@ -531,7 +550,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{23, 142}, {264, 38}}</string>
 								<reference key="NSSuperview" ref="68749440"/>
-								<reference key="NSNextKeyView"/>
+								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -563,6 +582,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 17}, {274, 112}}</string>
 								<reference key="NSSuperview" ref="68749440"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="890679878"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -581,6 +601,7 @@
 						</array>
 						<string key="NSFrame">{{0, 495}, {311, 187}}</string>
 						<reference key="NSSuperview" ref="588354170"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="636497240"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="608764614"/>
@@ -606,6 +627,7 @@
 				</array>
 				<string key="NSFrameSize">{311, 682}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="781824313"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="608764614"/>
@@ -613,10 +635,9 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIDatePicker" id="203110339">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">290</int>
 				<string key="NSFrameSize">{320, 216}</string>
-				<reference key="NSSuperview"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<int key="IBUIContentHorizontalAlignment">0</int>
@@ -723,6 +744,15 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA</b
 						<reference key="destination" ref="966899717"/>
 					</object>
 					<int key="connectionID">136</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">onTouchPickRecipient:</string>
+						<reference key="source" ref="281916264"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">141</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -973,9 +1003,83 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA</b
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">140</int>
+			<int key="maxID">141</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">PaperSettingsViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="onTouchBackgroundButton:">id</string>
+						<string key="onTouchPickRecipient:">id</string>
+						<string key="onTouchSave:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="onTouchBackgroundButton:">
+							<string key="name">onTouchBackgroundButton:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="onTouchPickRecipient:">
+							<string key="name">onTouchPickRecipient:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="onTouchSave:">
+							<string key="name">onTouchSave:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="backgroundImageView">UIImageView</string>
+						<string key="containerView">UIView</string>
+						<string key="noticeField">UITextField</string>
+						<string key="receiveDateField">UITextField</string>
+						<string key="receiveTimeField">UITextField</string>
+						<string key="recipientNameField">UITextField</string>
+						<string key="scrollView">UIScrollView</string>
+						<string key="titleField">UITextField</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="backgroundImageView">
+							<string key="name">backgroundImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="containerView">
+							<string key="name">containerView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="noticeField">
+							<string key="name">noticeField</string>
+							<string key="candidateClassName">UITextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="receiveDateField">
+							<string key="name">receiveDateField</string>
+							<string key="candidateClassName">UITextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="receiveTimeField">
+							<string key="name">receiveTimeField</string>
+							<string key="candidateClassName">UITextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="recipientNameField">
+							<string key="name">recipientNameField</string>
+							<string key="candidateClassName">UITextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="scrollView">
+							<string key="name">scrollView</string>
+							<string key="candidateClassName">UIScrollView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="titleField">
+							<string key="name">titleField</string>
+							<string key="candidateClassName">UITextField</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/PaperSettingsViewController.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
