--- a/RollingPaper/RollingPaper/Controllers/PaperTableViewCell.xib
+++ b/RollingPaper/RollingPaper/Controllers/PaperTableViewCell.xib
@@ -51,7 +51,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{233, 9}, {26, 20}}</string>
 										<reference key="NSSuperview" ref="403583007"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="504038789"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIAutoresizesSubviews">NO</bool>
@@ -67,7 +66,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrameSize">{245, 96}</string>
 										<reference key="NSSuperview" ref="403583007"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="352550894"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<object class="NSColor" key="IBUIBackgroundColor" id="59953708">
@@ -88,7 +86,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrameSize">{248, 100}</string>
 										<reference key="NSSuperview" ref="403583007"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="1026753931"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<object class="NSColor" key="IBUIBackgroundColor" id="664282196">
@@ -109,7 +106,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{0, 53}, {245, 43}}</string>
 										<reference key="NSSuperview" ref="403583007"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="479840534"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
@@ -124,7 +120,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{6, 61}, {150, 15}}</string>
 										<reference key="NSSuperview" ref="403583007"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="120012039"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -158,7 +153,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{6, 77}, {150, 15}}</string>
 										<reference key="NSSuperview" ref="403583007"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="7892137"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -183,7 +177,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{127, 66}, {80, 27}}</string>
 										<reference key="NSSuperview" ref="403583007"/>
-										<reference key="NSWindow"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIAutoresizesSubviews">NO</bool>
@@ -222,7 +215,6 @@
 								</array>
 								<string key="NSFrame">{{25, 0}, {245, 96}}</string>
 								<reference key="NSSuperview" ref="481550076"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="482408169"/>
 								<reference key="IBUIBackgroundColor" ref="664282196"/>
 								<bool key="IBUIAutoresizesSubviews">NO</bool>
@@ -231,7 +223,6 @@
 						</array>
 						<string key="NSFrameSize">{295, 95}</string>
 						<reference key="NSSuperview" ref="680474811"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="403583007"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<reference key="IBUIBackgroundColor" ref="664282196"/>
@@ -244,7 +235,6 @@
 				</array>
 				<string key="NSFrameSize">{295, 96}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="481550076"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="664282196"/>
@@ -406,56 +396,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">67</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">PaperTableViewCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="onBackgroundToched:">id</string>
-						<string key="onSettingTouched:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="onBackgroundToched:">
-							<string key="name">onBackgroundToched:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="onSettingTouched:">
-							<string key="name">onSettingTouched:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="backgroundImage">UIImageView</string>
-						<string key="ddayLabel">UILabel</string>
-						<string key="indicatorForNew">UIImageView</string>
-						<string key="titleLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="backgroundImage">
-							<string key="name">backgroundImage</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="ddayLabel">
-							<string key="name">ddayLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="indicatorForNew">
-							<string key="name">indicatorForNew</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="titleLabel">
-							<string key="name">titleLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PaperTableViewCell.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
